# PICA-Python-Instrument-Control-and-Automation

./: .coverage  .coveragerc  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PICA_README.md  PICA_v6.py  README.md  Rename_to_GUI.py  Update_path.py  automated_name_change.py  build.py  coverage.xml  finalize_structure.py  index.rst  pyproject.toml  requirements.txt  robots.txt
.github/workflows/: codeql.yml  joss_tests.yml  python-app.yml
Delta_mode_Keithley_6221_2182/: Delta_RT_K6221_K2182_L350_Sensing_Frontend_v5.py  Delta_RT_K6221_K2182_L350_Sensing_GUI_v5.py  Delta_RT_K6221_K2182_L350_T_Control_Frontend_v5.py  Delta_RT_K6221_K2182_L350_T_Control_GUI_v5.py  IV_K6221_DC_Sweep_Frontend_V10.py  IV_K6221_DC_Sweep_GUI_V10.py
Delta_mode_Keithley_6221_2182/Backends/: Delta_K6221_K2182_L350_T_Sensing_Backend_v1.py  Delta_K6221_K2182_Simple_v7.py
Keithley_2400/: IV_K2400_Frontend_v5.py  IV_K2400_GUI_v5.py  RT_K2400_L350_T_Control_Frontend_v3.py  RT_K2400_L350_T_Control_GUI_v3.py  RT_K2400_L350_T_Sensing_Frontend_v4.py  RT_K2400_L350_T_Sensing_GUI_v4.py
Keithley_2400/Backends/: IV_K2400_Loop_Backend_v10.py
Keithley_2400/Instrument_Control/: IV_K2400_Loop_Instrument_Control_v10.py
Keithley_2400_Keithley_2182/: IV_K2400_K2182_Frontend_v3.py  IV_K2400_K2182_GUI_v3.py  RT_K2400_2182_L350_T_Sensing_Frontend_v2.py  RT_K2400_2182_L350_T_Sensing_GUI_v2.py  RT_K2400_K2182_T_Control_Frontend_v3.py  RT_K2400_K2182_T_Control_GUI_v3.py
Keithley_2400_Keithley_2182/Backends/: IV_K2400_K2182_Backend_v1.py
Keithley_6517B/High_Resistance/: IV_K6517B_Frontend_v11.py  IV_K6517B_GUI_v11.py  RT_K6517B_L350_T_Control_GUI_v13.py  RT_K6517B_L350_T_Sensing_Frontend_v14.py  RT_K6517B_L350_T_Sensing_GUI_v14.py
Keithley_6517B/High_Resistance/Backends/: IV_K6517B_L350_T_Control_Backend_v6.py  IV_K6517B_Simple_Backend_v10.py
Keithley_6517B/High_Resistance/Instrument_Control/: IV_K6517B_L350_T_Control_Instrument_Control_v6.py
Keithley_6517B/Pyroelectricity/: Pyroelectric_K6517B_L350_GUI_v4.py
Keithley_6517B/Pyroelectricity/Backends/: Current_K6517B_Simple_Backend_v10.py  Poling_K6517B_Backend_v10.py  PyroDataVisualization_Simple_v10.py  Pyroelectric_K6517B_Working_Backend_v10.py
Keithley_6517B/Pyroelectricity/Instrument_Control/: Current_K6517B_Simple_Instrument_Control_v10.py  Poling_K6517B_Instrument_Control_v10.py  Pyroelectric_K6517B_Working_Instrument_Control_v10.py
LCR_Keysight_E4980A/: CV_KE4980A_GUI_v3.py
LCR_Keysight_E4980A/Backends/: CV_KE4980A_Simple_Backend_v10.py
LCR_Keysight_E4980A/Instrument_Control/: CV_KE4980A_Simple_Instrument_Control_v10.py
Lakeshore_350_340/: T_Control_L350_RangeControl_GUI_v8.py  T_Sensing_L350_GUI_v4.py
Lakeshore_350_340/Backends/: T_Control_L350_Simple_Backend_v10.py
Lakeshore_350_340/Instrument_Control/: T_Control_L350_Simple_Instrument_Control_v10.py
Lock_in_amplifier/: BasicTest_S830_Backend_v1.py  BasicTest_S830_Instrument_Control_v1.py
Utilities/: GIPB_InterfaceTest_Simple_Backend.py  GPIB_Instrument_Scanner_GUI_v4.py  GPIB_Interface_Rescue_Simple_Backened_v2_.py  GUI_Basic_Format_v2.py  LivePlotter_v10.py  PlotterUtil_GUI_v3.py  my_plot_utils.py  plot_utils.py
deployment/: Picachu.py  build-exe.yml  build.py
docs/: Change_Logs.md  PICA_README.md  Ranges_for_Measurements.md  User_Manual.md  git_to_csv.py  project_paths_reference.txt  simple_history.txt
paper/: paper.md
tests/: conftest.py  test_auto_discovery.py  test_backends_logic.py  test_deep_simulation.py  test_fixes.py  test_full_stack_simulation.py  test_full_stack_simulation.py.  test_gui_iv_k2400.py  test_gui_layouts.py  test_gui_modules_initialization.py  test_iv_k2400_loop_backend.py  test_iv_k6517b_simple_backend.py  test_iv_k6517b_simple_backend.py@@ -1,40 +1,31 @@  test_live_plotter.py  test_package_integrity.py  test_pica_launcher.py  test_t_control_l350_backend.py  test_utilities_logic.py  tests_output.txt
