[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pica-automation"
version = "14.1.0"
authors = [
    { name = "Prathamesh Deshmukh", email = "prathameshium@duck.com" },
]
description = "A modular software suite for automating laboratory measurements in physics research."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
    "pyvisa",
    "pyvisa-py",
    "numpy",
    "matplotlib",
    "pandas",
    "pymeasure",
    "Pillow",
    # "gpib-ctypes"
]

[project.urls]
"Homepage" = "https://github.com/prathameshnium/PICA-Python-Instrument-Control-and-Automation"
"Bug Tracker" = "https://github.com/prathameshnium/PICA-Python-Instrument-Control-and-Automation/issues"

[project.gui-scripts]
pica-launcher = "PICA_v6:main"

# --- CRITICAL SECTION FOR YOUR FOLDER STRUCTURE ---
[tool.setuptools.packages.find]
where = ["."]  # Look in the root directory
include = ["*"]  # Automatically find folders like 'Keithley_2400', 'Utilities', etc.
exclude = ["tests*", "_assets*", "Setup*"]  # Don't install the tests or assets
